Since this version is specific to server, a lot of extra stuff has been dropped, updated, and added since the last commit.