@@ -1,40 +1,38 @@
 package me.elsiff.morefish.fishing.competition;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import javax.annotation.Nonnull;
+import me.elsiff.morefish.MoreFish;
 import me.elsiff.morefish.configuration.Config;
 import me.elsiff.morefish.configuration.Lang;
 import me.elsiff.morefish.util.NumberUtils;
+import net.kyori.adventure.text.Component;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
+import org.bukkit.Server;
 import org.bukkit.command.CommandSender;
 import org.bukkit.configuration.ConfigurationSection;
+import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Player;
-import org.bukkit.plugin.Plugin;
 import org.bukkit.scheduler.BukkitTask;
 
 public final class FishingCompetitionHost {
 
     @Nonnull
-    private final FishingCompetition competition;
-    private final Plugin plugin;
-    private final FishingCompetitionTimerBarHandler timerBarHandler;
+    private final MoreFish plugin = MoreFish.instance();
+    @Nonnull
+    private final FishingCompetition competition = plugin.getCompetition();
+    @Nonnull
+    private final FishingCompetitionTimerBarHandler timerBarHandler = new FishingCompetitionTimerBarHandler();
     private BukkitTask timerTask;
 
-    public FishingCompetitionHost(@Nonnull Plugin plugin, @Nonnull FishingCompetition competition) {
-        this.plugin = plugin;
-        this.competition = competition;
-        this.timerBarHandler = new FishingCompetitionTimerBarHandler(plugin);
-    }
-
-    public final void closeCompetition() {
+    public void closeCompetition() {
         closeCompetition(false);
     }
 
-    public final void closeCompetition(boolean suspend) {
+    public void closeCompetition(boolean suspend) {
         competition.disable();
         if (timerTask != null) {
             timerTask.cancel();
@@ -45,7 +43,7 @@ public final class FishingCompetitionHost {
 
         boolean broadcast = getMsgConfig().getBoolean("broadcast-stop");
         if (broadcast) {
-            plugin.getServer().broadcastMessage(Lang.INSTANCE.text("contest-stop"));
+            plugin.getServer().broadcast(Component.text(Lang.CONTEST_STOP));
         }
 
         if (!suspend) {
@@ -66,74 +64,80 @@ public final class FishingCompetitionHost {
             }
         }
 
-        if (!Config.INSTANCE.getStandard().getBoolean("general.save-records")) {
+        if (!getConfig().getBoolean("general.save-records")) {
             competition.clearRecords();
         }
     }
 
     @Nonnull
-    public final FishingCompetition getCompetition() {
+    public FishingCompetition getCompetition() {
         return competition;
     }
 
+    @Nonnull
+    private FileConfiguration getConfig() {
+        return plugin.getConfig();
+    }
+
     private ConfigurationSection getMsgConfig() {
-        return Config.INSTANCE.getStandard().getConfigurationSection("messages");
+        return getConfig().getConfigurationSection("messages");
     }
 
     @Nonnull
     private Map<Integer, Prize> getPrizes() {
-        return Config.INSTANCE.getPrizeMapLoader().loadFrom(Config.INSTANCE.getStandard(), "contest-prizes");
+        return Config.getPrizes();
     }
 
-    public final void informAboutRanking(@Nonnull CommandSender receiver) {
+    public void informAboutRanking(@Nonnull CommandSender receiver) {
         if (competition.getRanking().isEmpty()) {
-            receiver.sendMessage(Lang.INSTANCE.text("top-no-record"));
+            receiver.sendMessage(Lang.TOP_NO_RECORD);
         }
         else {
             int topSize = getMsgConfig().getInt("top-number", 1);
             List<Record> top = competition.top(topSize);
             top.forEach(record -> {
                 int number = top.indexOf(record) + 1;
-                receiver.sendMessage(Lang.INSTANCE.format("top-list").replace(topReplacementOf(number, record)).output());
+                receiver.sendMessage(Lang.replace(Lang.TOP_LIST, topReplacementOf(number, record)));
             });
 
             if (receiver instanceof Player) {
                 if (!competition.containsContestant(((Player) receiver).getUniqueId())) {
-                    receiver.sendMessage(Lang.INSTANCE.text("top-mine-no-record"));
+                    receiver.sendMessage(Lang.TOP_MINE_NO_RECORD);
                 }
                 else {
                     Entry<Integer, Record> entry = competition.rankedRecordOf((OfflinePlayer) receiver);
-                    receiver.sendMessage(Lang.INSTANCE.format("top-mine").replace(topReplacementOf(entry.getKey() + 1, entry.getValue())).output());
+                    receiver.sendMessage(Lang.replace(Lang.TOP_MINE, topReplacementOf(entry.getKey() + 1, entry.getValue())));
                 }
             }
         }
 
     }
 
-    public final void openCompetition() {
+    public void openCompetition() {
         competition.enable();
         if (getMsgConfig().getBoolean("broadcast-start")) {
-            plugin.getServer().broadcastMessage(Lang.INSTANCE.text("contest-start"));
+            plugin.getServer().broadcast(Component.text(Lang.CONTEST_START));
         }
 
     }
 
-    public final void openCompetitionFor(long tick) {
+    public void openCompetitionFor(long tick) {
         long duration = tick / (long) 20;
         competition.enable();
-        timerTask = plugin.getServer().getScheduler().runTaskLater(plugin, (Runnable) this::closeCompetition, tick);
-        if (Config.INSTANCE.getStandard().getBoolean("general.use-boss-bar")) {
+        Server server = plugin.getServer();
+        timerTask = server.getScheduler().runTaskLater(plugin, (Runnable) this::closeCompetition, tick);
+        if (getConfig().getBoolean("general.use-boss-bar")) {
             timerBarHandler.enableTimer(duration);
         }
 
         if (getMsgConfig().getBoolean("broadcast-start")) {
-            plugin.getServer().broadcastMessage(Lang.INSTANCE.text("contest-start"));
-            String msg = Lang.INSTANCE.format("contest-start-timer").replace(ImmutableMap.of("%time%", Lang.INSTANCE.time(duration))).output();
-            plugin.getServer().broadcastMessage(msg);
+            server.broadcast(Component.text(Lang.CONTEST_START));
+            server.broadcast(Component.text(Lang.replace(Lang.CONTEST_START_TIMER, Map.of("%time%", Lang.time(duration)))));
         }
     }
 
     private Map<String, Object> topReplacementOf(int number, Record record) {
-        return ImmutableMap.of("%ordinal%", NumberUtils.ordinalOf(number), "%number%", String.valueOf(number), "%player%", Bukkit.getOfflinePlayer(record.getFisher()).getName(), "%length%", String.valueOf(record.getFish().getLength()), "%fish%", record.getFish().getType().getName());
+        String player = Bukkit.getOfflinePlayer(record.getFisher()).getName();
+        return Map.of("%ordinal%", NumberUtils.ordinalOf(number), "%number%", String.valueOf(number), "%player%", player == null ? "null" : player, "%length%", String.valueOf(record.getFish().getLength()), "%fish%", record.getFish().getType().getName());
     }
 }
