@@ -1,8 +1,8 @@
 package me.elsiff.morefish.fishing.competition;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
 import javax.annotation.Nonnull;
-import me.elsiff.morefish.configuration.Config;
+import me.elsiff.morefish.MoreFish;
 import me.elsiff.morefish.configuration.Lang;
 import org.bukkit.NamespacedKey;
 import org.bukkit.boss.BarColor;
@@ -13,24 +13,18 @@ import org.bukkit.event.HandlerList;
 import org.bukkit.event.Listener;
 import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
-import org.bukkit.plugin.Plugin;
 import org.bukkit.scheduler.BukkitRunnable;
 import org.bukkit.scheduler.BukkitTask;
 
 public final class FishingCompetitionTimerBarHandler {
 
-    private final Plugin plugin;
-    private final NamespacedKey timerBarKey;
+    private final MoreFish plugin = MoreFish.instance();
+    private final NamespacedKey timerBarKey = new NamespacedKey(plugin, "fishing-competition-timer-bar");
     private FishingCompetitionTimerBarHandler.TimerBarDisplayer barDisplayer;
     private BukkitTask barUpdatingTask;
     private BossBar timerBar;
 
-    public FishingCompetitionTimerBarHandler(@Nonnull Plugin plugin) {
-        this.plugin = plugin;
-        this.timerBarKey = new NamespacedKey(this.plugin, "fishing-competition-timer-bar");
-    }
-
-    public final void disableTimer() {
+    public void disableTimer() {
         barUpdatingTask.cancel();
         barUpdatingTask = null;
         timerBar.setTitle(timerBarTitle(0));
@@ -42,31 +36,31 @@ public final class FishingCompetitionTimerBarHandler {
         timerBar = null;
     }
 
-    public final void enableTimer(long duration) {
-        BarColor barColor = BarColor.valueOf(Config.INSTANCE.getStandard().getString("messages.contest-bar-color").toUpperCase());
+    public void enableTimer(long duration) {
+        BarColor barColor = BarColor.valueOf(plugin.getConfig().getString("messages.contest-bar-color", "blue").toUpperCase());
         timerBar = plugin.getServer().createBossBar(timerBarKey, "", barColor, BarStyle.SEGMENTED_10);
         plugin.getServer().getOnlinePlayers().forEach(timerBar::addPlayer);
         barUpdatingTask = new TimerBarUpdater(duration).runTaskTimer(plugin, 0, 20L);
         plugin.getServer().getPluginManager().registerEvents(barDisplayer = new TimerBarDisplayer(), plugin);
     }
 
-    public final boolean getHasTimerEnabled() {
+    public boolean getHasTimerEnabled() {
         return this.timerBar != null;
     }
 
     private String timerBarTitle(long remainingSeconds) {
-        return Lang.INSTANCE.format("timer-boss-bar").replace(ImmutableMap.of("%time%", Lang.INSTANCE.time(remainingSeconds))).output();
+        return Lang.replace(Lang.TIMER_BOSS_BAR, Map.of("%time%", Lang.time(remainingSeconds)));
     }
 
     private final class TimerBarDisplayer implements Listener {
 
         @EventHandler
-        public final void onPlayerJoin(@Nonnull PlayerJoinEvent event) {
+        public void onPlayerJoin(@Nonnull PlayerJoinEvent event) {
             timerBar.addPlayer(event.getPlayer());
         }
 
         @EventHandler
-        public final void onPlayerQuit(@Nonnull PlayerQuitEvent event) {
+        public void onPlayerQuit(@Nonnull PlayerQuitEvent event) {
             timerBar.removePlayer(event.getPlayer());
         }
     }
